lab-01/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-api-svc
  namespace: letiendung
spec:
  type: ClusterIP
  selector:
    app: order-api
  ports:
  - name: http
    port: 80
    targetPort: 8080
