lab-01/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: order-api-ingress
  namespace: letiendung
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: api.ledung.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: order-api-svc
            port:
              number: 80
